fix: fix header covering content on certain devices

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -11,6 +11,7 @@ html {
 }
 
 body {
+  margin: 0 0 var(--header-height) 0;
   font-family: var(--body-font);
   font-size: 0.95rem;
   color: var(--first-color);
